name:                cep-sodium
version:             0.1.0.0
synopsis:            A Sodium FRP front-end to the cep library.
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              James ‘Twey’ Kay
maintainer:          twey@twey.co.uk
copyright:           (C) 2014 Tweag I/O Limited
category:            Network
build-type:          Simple
extra-source-files:  examples/
cabal-version:       >=1.10

library
  exposed-modules:     Network.CEP.Processor.Sodium
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       distributed-process >=0.5 && <0.6,
                       sodium >=0.10 && <0.11,
                       mtl >=2.1 && <2.2,
                       cep==0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable simple
  default-language: Haskell2010
  main-is:          examples/Simple.hs
  build-depends:    base >=4.7 && <4.8,
                    network-transport==0.4.*,
                    network-transport-tcp==0.4.*,
                    distributed-process==0.5.*,
                    lens >=4.3 && <4.5,
                    cep==0.1.*,
                    cep-sodium==0.1.*,
                    sodium==0.10.*
  ghc-options:      -Wall -Werror

executable temperature
  default-language: Haskell2010
  other-extensions: DeriveDataTypeable, GeneralizedNewtypeDeriving
  main-is:          examples/Temperature.lhs
  build-depends:    base >=4.7 && <4.8,
                    network-transport==0.4.*,
                    network-transport-tcp==0.4.*,
                    distributed-process==0.5.*,
                    cep==0.1.*,
                    cep-sodium==0.1.*,
                    lens >=4.3 && <4.5,
                    sodium==0.10.*,
                    sodium-utils==0.1.*,
                    time==1.4.*,
                    binary==0.7.*,
                    containers==0.5.*
  ghc-options:      -Wall -Werror

executable temperature-random
  default-language: Haskell2010
  other-extensions: DeriveDataTypeable, GeneralizedNewtypeDeriving
  hs-source-dirs:   examples/TemperatureRandom
  main-is:          Main.hs
  build-depends:    base >=4.7 && <4.8,
                    network-transport==0.4.*,
                    network-transport-tcp==0.4.*,
                    cep==0.1.*,
                    cep-sodium==0.1.*,
                    sodium==0.10.*,
                    sodium-utils==0.1.*,
                    time==1.4.*,
                    binary==0.7.*,
                    containers==0.5.*,
                    distributed-process==0.5.*,
                    random==1.0.*,
                    lens >=4.3 && <4.5,
                    mtl==2.1.*,
                    gloss==1.8.*
  ghc-options:      -Wall -Werror
