name:                cep
version:             0.1.0.0
synopsis:            A Complex Event Processing framework.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              James ‘Twey’ Kay
maintainer:          twey@twey.co.uk
copyright:           (C) 2014 Tweag I/O Limited
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.CEP

  other-modules:       Network.CEP.Types

  other-extensions:    DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       DeriveGeneric
  build-depends:       base >=4.6 && <5,
                       distributed-process==0.5.*,
                       binary==0.7.*,
                       bytestring,
                       mtl,
                       multimap==1.2.*,
                       containers==0.5.*,
                       netwire,
                       time
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

-- executable simple
--  hs-source-dirs:      castor-stories
--  default-language:    Haskell2010
--  main-is:             Main.hs
--  default-extensions:  ScopedTypeVariables
--  build-depends:       base >=4.6 && <4.9,
--                       lens >=4.3 && <4.9,
--                       mtl,
--                       network-transport==0.4.*,
--                       network-transport-tcp==0.4.*,
--                       distributed-process==0.5.*,
--                       cep,
--                       binary,
--                       containers,
--                       netwire,
--                      random
--  ghc-options:      -Wall
--  buildable: False


-- executable simple
--   hs-source-dirs:      examples
--   default-language:    Haskell2010
--   main-is:             Simple.hs
--   default-extensions:  ScopedTypeVariables
--   build-depends:       base >=4.6 && <4.8,
--                        lens >=4.3 && <4.5,
--                        mtl,
--                        network-transport==0.4.*,
--                        network-transport-tcp==0.4.*,
--                        distributed-process==0.5.*,
--                        cep
--   ghc-options:      -Wall -Werror
