name:                cep
version:             0.1.0.0
synopsis:            A Complex Event Processing framework.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              James ‘Twey’ Kay
maintainer:          twey@twey.co.uk
copyright:           (C) 2014 Tweag I/O Limited
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Network.CEP

  other-modules:       Network.CEP.Buffer
                       Network.CEP.Engine
                       Network.CEP.Execution
                       Network.CEP.Phase
                       Network.CEP.SM
                       Network.CEP.Types
                       Network.CEP.Utils

  other-extensions:    DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       DeriveGeneric
  build-depends:       base >=4.6 && <5,
                       distributed-process>=0.5.3,
                       binary==0.7.*,
                       bytestring,
                       mtl,
                       multimap==1.2.*,
                       containers==0.5.*,
                       netwire,
                       time,
                       operational
  default-language:    Haskell2010
  ghc-options:         -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

Test-Suite unit-tests
  Type: exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs: tests
  Main-Is: UnitTests.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends: base,
                 distributed-process,
                 mtl,
                 network-transport,
                 network-transport-tcp,
                 distributed-process,
                 cep,
                 binary,
                 containers,
                 netwire,
                 random,
                 tasty,
                 tasty-hunit,
                 tasty-files
