Name:          confc
Version:       0.0.3
Synopsis:      Bindings for Mero configuration client library.
Description:   The Mero configuration client library allows programs
               to contact the confd service.
License:       AllRightsReserved
Copyright:     (C) 2013 Xyratex Technology Limited
Category:      Network
Build-Type:    Custom
Cabal-Version: >= 1.10

Flag mero
  Description: Assume Mero is fully functional, so run tests.
  Default: False

Library
  Default-Language:    Haskell2010
  exposed-modules:     Mero.ConfC
                     , Mero.Spiel
  other-modules:       Mero.Conf.Fid
                     , Mero.Conf.Internal
                     , Mero.Conf.Obj
                     , Mero.Conf.Tree
                     , Mero.Conf.Context
                     , Mero.Spiel.Context
                     , Mero.Spiel.Internal
  build-depends:       base
                     , aeson
                     , containers
                     , binary
                     , bytestring
                     , hashable
                     , inline-c
                     , rpclite
                     , text

  -- cc-options aren't used when compiling Haskell files, and this is necessary
  -- for using CApiFFI, thus we need to pass those options here as well
  ghc-options:  -Wall -fprof-auto -fprof-auto-calls -fPIC -optc-Wno-attributes
                -optc-Werror -optc-g -optc-DM0_INTERNAL= -optc-DM0_EXTERN=extern
  default-extensions:  CPP
  other-extensions:    TemplateHaskell, QuasiQuotes, CApiFFI

  include-dirs: .
  c-sources:  confc_helpers.c
  pkgconfig-depends: mero >= 0.1.0

Test-Suite integration-tests
  Type:           exitcode-stdio-1.0
  main-is:        integration-tests.hs
  Default-Language: Haskell2010
  hs-source-dirs: tests
  ghc-options:     -Wall -idist/build -threaded -fno-warn-unused-do-bind
  other-extensions:  LambdaCase
  other-modules:     Helper
                     Test.ConfRead
                     Test.CopyConf
                     Test.MakeConf
                     Test.Management
  build-depends:  base >= 4.3
                , bytestring
                , confc
                , rpclite
                , binary
                , hashable
                , unix
                , process
                , tasty
                , tasty-files
                , tasty-hunit
                , containers
  Buildable: False
  if !flag(mero)
    Buildable: False

Test-Suite unit-tests
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests/
  Main-Is:          unit-tests.hs
  c-sources:        tests/unit-tests.c
  cc-options: -Wno-attributes -Werror -g -DM0_INTERNAL= -DM0_EXTERN=extern
  Ghc-Options: -threaded -Wall
  Build-Depends:   confc >= 0.0.3,
                   base >= 4.5,
                   inline-c,
                   tasty,
                   tasty-hunit,
                   rpclite
  extra-libraries: mero
  if !flag(mero)
    Buildable: False

Test-Suite test-dump-transaction
  Type:           exitcode-stdio-1.0
  main-is:        test-dump-transaction.hs
  Default-Language: Haskell2010
  hs-source-dirs: tests
  ghc-options:     -Wall -idist/build -threaded -fno-warn-unused-do-bind
  other-extensions:  LambdaCase
  other-modules:  Test.MakeConf
                  Helper
  build-depends:  base >= 4.3
                , confc
                , rpclite
                , unix
                , process
                , containers
  if !flag(mero)
    Buildable: False
