Name:          confc
Version:       0.1.1
Synopsis:      Bindings for Mero configuration client library.
Description:   The Mero configuration client library allows programs
               to contact the confd service.
License:       Apache-2.0
Copyright:     (C) 2013-2018 Seagate Technology LLC and/or its Affiliates
Category:      Network
Build-Type:    Simple
Cabal-Version: >= 1.10

Library
  Default-Language:    Haskell2010
  exposed-modules:     Mero.ConfC
                     , Mero.Spiel
  other-modules:       Mero.Conf.Context
                     , Mero.Conf.Fid
                     , Mero.Conf.Obj
                     , Mero.Spiel.Context
                     , Mero.Spiel.Internal
  build-depends:       base
                     , aeson
                     , cereal
                     , containers
                     , binary
                     , bytestring
                     , hashable
                     , inline-c
                     , rpclite
                     , safecopy
                     , text

  -- cc-options aren't used when compiling Haskell files, and this is necessary
  -- for using CApiFFI, thus we need to pass those options here as well
  ghc-options:  -Wall -fprof-auto -fprof-auto-calls -fPIC -optc-Wno-attributes
                -optc-Werror -optc-g -optc-DM0_INTERNAL= -optc-DM0_EXTERN=extern
  default-extensions:  CPP
  other-extensions:    TemplateHaskell, QuasiQuotes, CApiFFI

  include-dirs:      .
                     ../rpclite/rpclite
  c-sources:         confc_helpers.c
  pkgconfig-depends: mero >= 0.1.0
