Name:           consensus-paxos
Version:        0.1
Stability:      experimental
Synopsis:       Collection of variants of the Paxos distributed algorithm.
License:        AllRightsReserved
Copyright:      © 2013 Xyratex Technology Limited
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@git.assembla.com:eiow-ha.git
  Subdir:       consensus-paxos

Flag randomTests
  Description: Builds random tests. Requires the deterministic sceduler to be enabled.
  Default: False

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs:   src/
  Exposed-Modules:  Control.Distributed.Process.Consensus.Paxos
                    Control.Distributed.Process.Consensus.Paxos.Types
                    Control.Distributed.Process.Consensus.Paxos.Messages
                    Control.Distributed.Process.Consensus.BasicPaxos
  Build-Depends:    acid-state >= 0.11,
                    base >= 4.5.0,
                    binary >= 0.6,
                    bytestring >= 0.9.2,
                    containers >= 0.4.0,
                    consensus,
                    distributed-process-scheduler,
                    distributed-static >= 0.2.0,
                    mtl >= 2.0.0,
                    random,
                    safecopy >= 0.8,
                    syb >= 0.3
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      ExistentialQuantification
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Other-Extensions:   TemplateHaskell
                      TypeFamilies
  Ghc-Options:      -Wall -Werror

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          ut.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Ghc-Options:      -Wall -threaded
  if flag(randomTests)
    Buildable:      False
  else
    Build-Depends:  base >= 4.5.0,
                    Cabal >= 1.10,
                    consensus,
                    consensus-paxos,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static >= 0.2.0,
                    mtl >= 2.0.0,
                    network-transport,
                    network-transport-tcp,
                    process >= 1.1
  Default-Extensions: RecordWildCards NamedFieldPuns
                      ScopedTypeVariables

Test-Suite random
  Type:             exitcode-stdio-1.0
  Main-Is:          random.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Ghc-Options:      -Wall -threaded
  if flag(randomTests)
    Build-Depends:    base >= 4.5.0,
                    consensus,
                    consensus-paxos,
                    containers,
                    distributed-process-scheduler,
                    distributed-static >= 0.2.0,
                    filepath >= 1.3,
                    network-transport,
                    network-transport-tcp,
                    process >= 1.1,
                    random
  else
    Buildable : False
