Name:           consensus-paxos
Version:        0.1
Stability:      experimental
Synopsis:       Collection of variants of the Paxos distributed algorithm.
License:        Apache-2.0
Copyright:      © 2013 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       consensus-paxos

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs:   src/
  Exposed-Modules:  Control.Distributed.Process.Consensus.Paxos
                    Control.Distributed.Process.Consensus.Paxos.Types
                    Control.Distributed.Process.Consensus.Paxos.Messages
                    Control.Distributed.Process.Consensus.BasicPaxos
                    Control.Distributed.Process.Pool.Bounded
                    Control.Distributed.Process.Pool.Keyed
  Build-Depends:    base >= 4.5.0,
                    binary >= 0.6,
                    bytestring >= 0.9.2,
                    containers >= 0.4.0,
                    consensus,
                    distributed-process-scheduler,
                    distributed-static >= 0.2.0,
                    exceptions,
                    mtl >= 2.0.0,
                    random,
                    safecopy >= 0.8,
                    syb >= 0.3
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      ExistentialQuantification
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Other-Extensions:   TemplateHaskell
                      TypeFamilies

  Ghc-Options: -Wall -Werror

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          ut.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    Test

  Ghc-Options: -threaded -Wall -Werror

  Build-Depends:    base >= 4.5.0,
                    consensus,
                    consensus-paxos,
                    containers >= 0.4.0,
                    distributed-process,
                    distributed-process-test,
                    distributed-static >= 0.2.0,
                    exceptions,
                    mtl >= 2.0.0,
                    network-transport,
                    network-transport-tcp,
                    unix,
                    tasty,
                    tasty-files
  Default-Extensions: RecordWildCards NamedFieldPuns
                      ScopedTypeVariables

Test-Suite random
  Type:             exitcode-stdio-1.0
  Main-Is:          random.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests

  Ghc-Options: -threaded -Wall -Werror

  Build-Depends:    base >= 4.5.0,
                    consensus,
                    consensus-paxos,
                    containers,
                    distributed-process-scheduler,
                    distributed-static >= 0.2.0,
                    exceptions,
                    filepath >= 1.3,
                    network-transport,
                    network-transport-inmemory,
                    unix,
                    random

Benchmark paxos
  Type:             exitcode-stdio-1.0
  Main-Is:          paxos.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks

  Ghc-Options: -threaded -Wall -Werror

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:    base >= 4.5.0,
                    consensus,
                    consensus-paxos,
                    containers,
                    distributed-process-scheduler,
                    filepath,
                    network-transport,
                    network-transport-tcp,
                    time,
                    unix
  Default-Extensions: RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
