Name:           consensus
Version:        0.1
Stability:      experimental
Synopsis:       Common interface for consensus algorithms.
License:        Apache-2.0
Copyright:      © 2013 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       consensus

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs:   src/
  Exposed-Modules:  Control.Distributed.Process.Consensus
                    Control.Distributed.Process.Quorum
                    Data.Lifted
  Build-Depends:    base >= 4.5.0,
                    binary >= 0.6,
                    distributed-static >= 0.2.0,
                    either >= 3.0.0,
                    transformers-either >= 0.0.2,
                    mtl >= 2.0.0,
                    distributed-process-scheduler,
                    syb >= 0.3
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      ExistentialQuantification
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Other-Extensions:   TemplateHaskell

  Ghc-Options: -Wall

  if flag(maintainer)
    Ghc-Options: -Werror
