Name:           distributed-commands
Version:        0.1
Stability:      experimental
Synopsis:       Provides commands to execute in remote hosts.
Homepage:       https://github.com/tweag/halon
License:        AllRightsReserved
Copyright:      (C) 2014 Xyratex Technology Limited
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       distributed-commands/

Flag distributed-tests
  Description: Enables distributed tests.
  Default: False

Flag digital-ocean-tests
  Description: Enables tests on Digital Ocean.
  Default: False

Flag docker-tests
  Description: Enables tests on docker.
  Default: False

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

Library
  Hs-Source-Dirs:  src
  Default-Language: Haskell2010

  if flag(maintainer)
    Ghc-Options:  -Wall -Werror
  else
    Ghc-Options:  -Wall

  Exposed-Modules: Control.Distributed.Commands.DigitalOcean
                   Control.Distributed.Commands.Docker
                   Control.Distributed.Commands
                   Control.Distributed.Commands.Internal.Log
                   Control.Distributed.Commands.Management
                   Control.Distributed.Commands.Process
                   Control.Distributed.Commands.Providers
                   Control.Distributed.Commands.Providers.DigitalOcean
                   Control.Distributed.Commands.Providers.Docker
  Build-Depends:   aeson >= 0.8.0.1
                  ,aeson-pretty >= 0.7.1
                  ,base
                  ,binary>=0.7.1.0
                  ,bytestring >= 0.10.4.0
                  ,distributed-process >= 0.5.0
                  ,distributed-static >= 0.3.0.0
                  ,lifted-async >= 0.2.0.2
                  ,mtl >= 2.1.3
                  ,network >= 2.4.2.3
                  ,process >= 1.2.0.0
                  ,scientific >= 0.3.3.1
                  ,text >= 1.2.0.0
                  ,transformers >= 0.3
                  ,unordered-containers >= 0.2.5.0

Test-Suite digitalocean
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          digitalocean.hs

  Ghc-Options: -threaded -Wall
  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(digital-ocean-tests)
    Build-Depends:   distributed-commands
                    ,base
  else
    Buildable:      False

Test-Suite docker
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          docker.hs

  Ghc-Options: -threaded -Wall
  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(docker-tests)
    Build-Depends:   distributed-commands
                    ,base
                    ,transformers
  else
    Buildable:      False


Test-Suite test-distributed-process
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          test-distributed-process.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(distributed-tests)
    Build-Depends:  distributed-commands
                   ,base
                   ,binary>=0.7.1.0
                   ,distributed-process
                   ,lifted-base >= 0.2.3.0
                   ,network-transport-tcp
  else
    Buildable:      False
